# octicons

./: .gitignore  README.md  octicons.cabal
src/: Icons.hs  update.sh
src/Icons/: Octicons.hs  Octicons.template
