name:                octicons
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/KommuSoft/octicons#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          vanonsem.willem@gmail.com
copyright:           2019 Willem Van Onsem
category:            web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Icons
    , Icons.Octicons
  build-depends:
      base >= 4.7 && <5
    , blaze-html >= 0.9 && <0.10
    , blaze-markup >= 0.8 && <0.9
    , text >= 1.2.3.1 && <1.2.4
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/KommuSoft/octicons
